[tool.poetry]
name = "lpp-collector"
version = "0.1.4"
description = ""
authors = ["f0reachARR <f0reach@f0reach.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6"
pytest = "^6.2.5"
whiptail-dialogs = "^0.4.0"
httpx = ">=0.20.0,<0.28.0"
attrs = ">=21.3.0"
python-dateutil = "^2.8.0"
pytest-timeout = "^2"
argcomplete = "^3"

[tool.poetry.plugins.pytest11]
lpp_collector = "lpp_collector"

[tool.poetry.scripts]
lppconsent = "lpp_collector.consent:main"
lpptest = "lpp_collector.runner:main_PYTHON_ARGCOMPLETE_OK"
lppshell = "lpp_collector.shell:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
